Fix Flex Wrap on Window

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-    font-size: max(10%, 20px);
+    font-size: clamp(10%, 20px, 2rem);
     font-family: 'Yanone Kaffeesatz', sans-serif;
     line-height: 1.5;
 }
@@ -14,7 +14,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
-    width: auto;
+    /* width: auto; */
 
     background: linear-gradient(90deg,
             rgba(4, 118, 242, 1) 0%,
@@ -31,7 +31,7 @@ body {
 .window {
     margin: 20px;
     height: calc(100vh - 5%);
-    width: calc(100vw - 5%);
+    /* width: calc(100vw - 5%); */
 
     border-radius: 10px;
 
@@ -43,19 +43,18 @@ body {
 
 /* SECTION: Image */
 .image {
-    /* min-width: max-content; */
-    max-width: 40%;
-    /* min-width: 300px; */
+    max-width: max(100%, 40%);
     min-height: 35%;
     max-height: min-content;
 
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 1;
+    flex: 1 2 300px;
+
+    position: relative;
 
     /* DIV Background */
-    position: relative;
     background-image: linear-gradient(80deg,
             rgba(4, 119, 242) 0%,
             rgba(4, 119, 242, 0.8) 40%,
@@ -68,7 +67,7 @@ body {
 .logo {
     position: absolute;
     width: 100%;
-    min-width: 300px;
+    /* min-width: 300px; */
     height: fit-content;
 
     display: flex;
@@ -87,15 +86,14 @@ body {
 
 /* SECTION: Form */
 .form {
-    max-width: 60%;
-    /* min-width: 500px; */
+    max-width: max(100%, 60%);
     padding: min(2%, 10px);
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    flex: 1;
+    flex: 2 1 780px;
 
     background-color: rgba(240, 248, 255, 0.70);
 }
@@ -105,7 +103,7 @@ form {
 
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     align-content: space-between;
     gap: 10px;
@@ -118,17 +116,17 @@ form label {
 
 /* SECTION Text Input */
 .field {
-    width: min(250px, 60%);
+    --field-width: min(250px, 60%);
+    max-width: var(--field-width);
 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: flex-start;
-    flex: 1 1 30%;
+    flex: 1 1 33%;
 }
 
 .text {
-    width: 100%;
+    width: 80%;
 }
 
 /* SECTION Character Selection */
@@ -142,6 +140,7 @@ form label {
 
 .choice {
     width: 100%;
+    max-width: var(--field-width);
 
     display: flex;
     flex-direction: column;
